@@ -1,3 +1,7 @@
+YATC 0.9.10:
+  yatc.py:
+    1. Add utf8=1 option for mount.
+
 YATC 0.9.9:
   yatc.py:
     1. Mounter class added.
